# bin2obj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bin2obj.cmake  bin2obj.h  bin2obj.py  example.c  test.bat  test.sh  test_bin2obj.py
.github/workflows/: test.yml
